fix: core init fn, spacing below nav

--- a/less/site.less
+++ b/less/site.less
@@ -53,7 +53,7 @@ header {
     text-decoration: none;
   }
   a.nav-link {
-    color: black;
+    color: inherit;
     &:hover, &.active {
       border-color: @yellow;
     }
